updated sokol, asset system now handles textures, asset manager supports texture atlasing

--- a/code/makefile
+++ b/code/makefile
@@ -107,6 +107,15 @@ $(BUILD_DIR):
 	$(call MKDIR,$(BUILD_DIR))
 
 # -------------------------------------------------------------------------
+# Build Shaders 
+# -------------------------------------------------------------------------
+# SHADER_SCRIPT = ../code/shaders/build_shaders.sh
+#
+# shaders:
+# 	@echo [SHADERS] Rebuilding shaders...
+# 	@$(SHELL) $(SHADER_SCRIPT)
+
+# -------------------------------------------------------------------------
 # Unit Tests
 # -------------------------------------------------------------------------
 tests: $(TESTS_OUT)
