--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -71,6 +71,16 @@
             "cwd": "${workspaceFolder}/build",
             "stopOnEntry": false,
             "terminal": "integrated"
+        },
+        {
+            "name": "test_new_hash_table",
+            "type": "lldb",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/test_new_hash_table",
+            "args": [],
+            "cwd": "${workspaceFolder}/build",
+            "stopOnEntry": false,
+            "terminal": "integrated"
         }
     ],
     "compounds": [
@@ -84,7 +94,8 @@
                 "test_dynarray",
                 "test_networking",
                 "test_threadpool",
-                "test_memory_arena"
+                "test_memory_arena",
+                "test_new_hash_table"
             ]
         }
     ]
