New string builder hooked up, seems like the new asset file format works fine

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -108,7 +108,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/build/test_new_string_builder",
             "args": [],
-            "cwd": "${workspaceFolder}/build",
+            "cwd": "${workspaceFolder}/run_tree/res",
             "stopOnEntry": false,
             "terminal": "integrated"
         },
